[package]
name = "test_win_api"
version = "0.1.0"
authors = ["Thomas <thomas@etnur.net>"]
edition = "2018"

[dependencies]
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase", "handleapi", "fileapi"] }
log = "*"
stderrlog = "*"
clap = "*"
lazy_static = "*"
regex = "1"